[package]
name = "bench-util"
version = "0.0.0"
edition = "2021"

[dependencies]
async-compression = { version = "0.4.17", features = ["tokio", "zstd"] }
directories = "5.0.1"
futures = "0.3.31"
graph = { workspace = true }
graph_builder = { workspace = true }
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["stream"] }
tokio = { version = "1.38.1", features = ["full"], default-features = true }
tokio-tar = "0.3.1"
tokio-util = { version = "0.7.11", features = ["io"] }
