[package]
name = "graph-algos"
description = "A collection of filters used in 'signalo' umbrella crate."
categories = ["algorithms", "data-structures", "science"]
keywords = ["graph", "graph-algorithm", "graph-theory"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/regexident/graph-algos"
rust-version = "1.68.2"
edition = "2021"
version = "0.1.0"

[dependencies]
graph = { workspace = true }
