[package]
name = "graph-algos"
description = "A collection of filters used in 'signalo' umbrella crate."
categories = ["algorithms", "data-structures", "science"]
keywords = ["graph", "graph-algorithm", "graph-theory"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/regexident/graph-algos"
rust-version = "1.68.2"
edition = "2021"
version = "0.1.0"

[dependencies]
bitvec = { workspace = true }
graph = { workspace = true }

[dev-dependencies]
bench-util = { path = "../bench-util", version = "0.0.0" }
criterion = "0.5.1"
graph_builder = { workspace = true, features = ["dotgraph", "gdl"] }
rand = "0.8.5"

[[bench]]
name = "serial_bfs"
harness = false

[[bench]]
name = "serial_dfs"
harness = false
